# pyrtlsdrlib

./: .gitignore  LICENSE  MANIFEST.in  Pipfile  README.rst  pyproject.toml  setup.cfg  setup.py  test.py
.github/: build_in_docker.sh  test_in_docker.sh
.github/workflows/: build-lib.yml  build-wheels.yml  cibw.yml
src/pyrtlsdrlib/: __init__.py  common.py  platform.py
src/pyrtlsdrlib/lib/: __init__.py  build-meta.json  librtlsdr.0.8git.dylib  librtlsdr.0.dylib  librtlsdr.so.0  librtlsdr.so.0.8git
src/pyrtlsdrlib/lib/custom_build/: .gitignore
tests/: conftest.py  test_custom_build.py  test_repo_build.py  test_wheel_files.py
tools/: build_from_source.py  build_wheels.py  common.py  get_releases.py  macos_version.py
