[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrtlsdrlib"
version = "0.0.3"
description = "librtlsdr installer for use with pyrtlsdr"
readme = "README.rst"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "Matthew Reid", email = "matt@nomadic-recording.com"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/pyrtlsdr/pyrtlsdrlib"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
build = [
    "build>=1.2.2.post1",
    "click>=8.1.8",
    "json-object-factory>=0.0.2",
    "loguru>=0.7.3",
    "pygithub>=2.8.1",
    "requests>=2.32.4",
    "standard-distutils>=3.11.9 ; sys_platform == 'darwin'",
]
test = [
    "pytest>=8.3.5",
]
dev = [
    {include-group = "build"},
    {include-group = "test"},
]
