[bdist_wheel]
universal = False

[metadata]
name = pyrtlsdrlib
version = 0.0.1
author = Matthew Reid
author_email = matt@nomadic-recording.com
url = https://github.com/pyrtlsdr/pyrtlsdrlib
description = librtlsdr installer for use with pyrtlsdr
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_files = LICENSE
platforms = any
python_requires = >=3.7
classifiers =
    Development Status :: 2 - Pre-Alpha
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
