[bdist_wheel]
universal = False

[metadata]
name = pyrtlsdrlib
version = 0.0.3
author = Matthew Reid
author_email = matt@nomadic-recording.com
url = https://github.com/pyrtlsdr/pyrtlsdrlib
description = librtlsdr installer for use with pyrtlsdr
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_files = LICENSE
platforms =
    Linux
    Mac OS-X
    Windows
python_requires = >=3.8
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: Microsoft :: Windows :: Windows 11
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
